syntax = "proto3";

package github.v1;

option go_package = "github.com/Thesohan/weaveGitHubSearchService/protos/github/v1/github_search_grpc";

service GithubSearchService {
  rpc Search(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string search_term = 1;
  optional string user = 2;
}

message SearchResponse {
  repeated Result results = 1;
}

message Result {
  string file_url = 1;
  string repo = 2;
}
